added basic function and css, needs a lot of work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="/rockpaperscissors/style.css" type="text/css" />
+<script src="/rockpaperscissors/script.js" defer async="false"></script>>
+</head>
 <body>
-<script src="/rockpaperscissors/script.js"></script>
+<button id="usrClickable" type="button">CLick To Play</button>
 </body>
 </html>
